--- a/src/pages/changePassword/changePassword.html
+++ b/src/pages/changePassword/changePassword.html
@@ -25,7 +25,7 @@
         </div>
     <div class="passwordInput">
             <label> New Password</label>
-    <input type="password" placeholder="Enter new password" name="newPassword" [(ngModel)]="password" #newPasswordValid = ngModel maxlength="15" required/>
+    <input type="password" placeholder="Enter new password" name="newPassword" [(ngModel)]="password" #newPasswordValid = ngModel  required/>
     <div  class="usernameRequirement" class="error" *ngIf ="newPasswordValid.touched && !newPasswordValid.valid">
         Password is required and follow the requirement.
       </div>
