--- a/src/pages/changePasswordFirst/changePasswordFirst.html
+++ b/src/pages/changePasswordFirst/changePasswordFirst.html
@@ -9,7 +9,7 @@
 
     <p class="passwordLogo"><i class="fa fa-lock icon passwordChange"></i></p>
    <div class="passwordContainer"> 
-       <p class="passwordgudlines"><span>Note:</span>Minimum of 6 characters with one lowercase,Uppercase,one digit and Must have at least a one special characters- “!,@,#,$,%,&,*,(,),+”
+       <p class="passwordgudlines"><span>Note:</span>Minimum of 6 characters with one Lowercase,Uppercase,one digit and must have at least a one special characters- “!,@,#,$,%,&,*,(,),+”
      </p> 
    </div>
    <div class="formContainer">
