--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -1,6 +1,6 @@
 
  
-<!-- <ion-content padding> -->
+<!-- <ion-content padding> 
   <!-- <ion-item>
     <ion-label stacked>Set Nickname</ion-label>
     <ion-input type="text" [(ngModel)]="nickname" placeholder="Nickname"></ion-input>
@@ -11,13 +11,13 @@
   </ion-list>
 </ion-item> -->
   <!-- <button ion-button full (click)="joinChat()" [disabled]="nickname === ''">Join Chat as {{ nickname }}</button> -->
-  <!-- <ion-header>
+  <ion-header>
     <ion-navbar color="primary">
       <ion-title>
-        Ionic API.AI 
+       Moneta - (Digital Assistance)
       </ion-title>
     </ion-navbar>
-  </ion-header> -->
+  </ion-header>
   
   <ion-content padding>
    
