--- a/src/pages/comments/comments.html
+++ b/src/pages/comments/comments.html
@@ -46,58 +46,59 @@
      </div>
 </ion-content> -->
 <ion-content>
-    <!-- <div class="subHeader">
+    <div class="subHeader">
             <p class="button-clear" ng-disabled="clicked" (click)="goBack()">
-                <i class="fa fa-angle-left" aria-hidden="true"></i>{{visitDetails.purpose}}
+                <i class="fa fa-angle-left" aria-hidden="true"></i>Cognizant DIgital Capabalities
+                <!-- {{visitDetails.purpose}}  -->
             </p>
             <div class="locationDetails" >
             <div class="companyConatiner">
                 <span class="company">Cognizant</span>
-                <div class="visitDetaikls" *ngFor="let visitDetails of visitDetails.visit_locations; let i =index">
+                <!-- <div class="visitDetaikls" *ngFor="let visitDetails of visitDetails.visit_locations; let i =index">
                     {{visitDetails.country}}, {{visitDetails.city}} - {{visitDetails.visitingLocation}}
-                </div>
+                </div> -->
                 </div>
             
-                <p class="daysCount">
+                <!-- <p class="daysCount">
                 <i class="fa fa-calendar fa-lg"></i>
                 <span>{{visitDetails.startDate | date: "d"}}<sup class="subScript">{{visitDetails.startSuperScript}}</sup> {{visitDetails.startDate | date: "MMM"}} - {{visitDetails.endDate | date: "d"}}<sup class="subScript">{{visitDetails.endSuperScript}}</sup> {{visitDetails.endDate | date: "MMM"}}  </span> | {{visitDetails.noOfDays}} Day(s)
-                </p>
+                </p> -->
         
             </div>
-            </div> -->
+            </div>
     <ul class="parameter-container">
         <li class= "parameters">
-            <span><i class="fas fa-file-alt"></i></span>
+            <span><i class="fa fa-file-alt"></i></span>
             <p>Content Quality</p>
-            <div><i class="fas fa-star"></i> <span>8</span>8/10</div>
+            <div><i class="fa fa-star" aria-hidden="true"></i><span>8</span>/10</div>
         </li>
         <li class= "parameters">
-            <span><i class="fas fa-file-alt"></i></span>
+            <span><i class="fa fa-file-alt"></i></span>
             <p>Presentation Skills</p>
-            <div><i class="fas fa-star"></i> <span>8</span>/10</div>
+            <div><i class="fa fa-star" aria-hidden="true"></i> <span>8</span>/10</div>
         </li>
         <li class= "parameters">
             SERVICES
         </li>
         <li class= "parameters">
-            <span><i class="fas fa-file-alt"></i></span>
+            <span><i class="fa fa-file-alt"></i></span>
             <p>Cab Services</p>
-            <div><i class="fas fa-star"></i> <span>8</span>/10</div>
+            <div><i class="fa fa-star" aria-hidden="true"></i> <span>8</span>/10</div>
         </li>
         <li class= "parameters">
-            <span><i class="fas fa-file-alt"></i></span>
+            <span><i class="fa fa-file-alt"></i></span>
             <p>Hotel Services</p>
-            <div><i class="fas fa-star"></i> <span>8</span>/10</div>
+            <div><i class="fa fa-star" aria-hidden="true"></i> <span>8</span>/10</div>
         </li>
         <li class= "parameters">
-            <span><i class="fas fa-file-alt"></i></span>
+            <span><i class="fa fa-file-alt"></i></span>
             <p>Food & Cafe Services</p>
-            <div><i class="fas fa-star"></i> <span>8</span>/10</div>
+            <div><i class="fa fa-star" aria-hidden="true"></i> <span>8</span>/10</div>
         </li>
         <li class= "parameters">
-            <span><i class="fas fa-file-alt"></i></span>
+            <span><i class="fa fa-file-text-o"></i></span>
             <p>Overall Rating</p>
-            <div><i class="fas fa-star"></i> <span>8</span>/10</div>
+            <div><i class="fa fa-star" aria-hidden="true"></i> <span>8</span>/10</div>
         </li>
     </ul>
 </ion-content>
