--- a/src/pages/mainHeader/mainHeader.html
+++ b/src/pages/mainHeader/mainHeader.html
@@ -57,6 +57,9 @@
      
 <ion-content>
         <ion-nav #mycontent [root]="home"></ion-nav>
-
+        <ion-fab middle right (click)="openChat()" id="chatBot"  style="background: url(assets/imgs/chatbot@2x.png);background-size: cover"
+        >
+         <button ion-fab style="background: url(assets/imgs/chatbot@3x.png);background-size: cover"></button>
+       </ion-fab>
 
 </ion-content>
