--- a/src/pages/changePassword/changePassword.html
+++ b/src/pages/changePassword/changePassword.html
@@ -2,7 +2,7 @@
 
 <div class="subHeader">
     <p class="button-clear"  (click)="goBack()">
-        <i class="fa fa-chevron-left" aria-hidden="true"></i>Change Password
+        <i class="fa fa-angle-left" aria-hidden="true"></i>Change Password
     </p>
 </div>
 <div>
