--- a/src/pages/notification/notification.html
+++ b/src/pages/notification/notification.html
@@ -1,7 +1,7 @@
 
 
 <div class="notificationHeader clearfix" *ngIf="allNotification" >
-    <i class="fa fa-chevron-left backArrow" aria-hidden="true" (click)="goBack()"></i>
+    <i class="fa fa-angle-left backArrow" aria-hidden="true" (click)="goBack()"></i>
     <p class="heading pull-left">Notifications ({{ notificationsUnread.length }})</p>
     <!-- <p class="notificationRead pull-right" >Mark all as Read</p> -->
 </div>
