--- a/src/pages/mainHeader/mainHeader.html
+++ b/src/pages/mainHeader/mainHeader.html
@@ -18,7 +18,7 @@
     <div id="notification-icon" class="notification-icon" >
       <i class="fa fa-bell-o notifiation" (click)="notificationPopover()" aria-hidden="true"></i>
       <i class="fa fa-comments-o notifiation" (click)="openChatInstant()" aria-hidden="true"></i>
-      <span *ngIf="notification" class="badge count">{{ notification.periodAgo }}</span>
+      <span *ngIf="notifications" class="badge count">{{  notificationsUnread.length }}</span>
     </div>
   </div>
   </ion-navbar>
